<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kompass_sim</name>
  <version>0.1.0</version>
  <description>Kompass Simulations and Tests</description>
  <maintainer email="contact@automatikarobotics.com">Automatika Robotics</maintainer>
  <license>MIT</license>

  <depend>webots_ros2</depend>
  <depend>rviz2</depend>
  <depend>nav2_map_server</depend>
  <depend>robot_localization</depend>
  <depend>cartographer_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
